--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ ul li{
 
 h1{
   font-family: 'Euphoria Script', cursive;
-  font-size: 30px;
+  font-size: 40px;
 }
 
 .left{
@@ -66,6 +66,7 @@ h1{
 .skillset ul li{
   text-align: left;
   border: none;
+  border-radius: 5px;
   color: white;
   padding: 15px;
 }
@@ -90,4 +91,30 @@ h1{
 .creative{
   width: 85%;
   background-color: #8C3269;
+}
+
+.imgbox{
+  width: 400px;
+  height: 700px;
+  margin: 20px auto 10px;
+  float: left;
+}
+
+.interest img{
+  width: 100%;
+  border: 4px solid #ffffff;
+  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.5);
+}
+
+.thumb ul{
+  margin: 0 auto;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.interest ul li img{
+  width: 120px;
+  margin: 20px auto 10px;
 }
