--- a/style.css
+++ b/style.css
@@ -64,11 +64,12 @@ h1{
 
 
 .skillset ul li{
-  text-align: right;
+  text-align: left;
   border: none;
   border-radius: 5px;
   color: white;
   opacity: .9;
+  padding-left: 10px;
 }
 
 .speak{
