--- a/style.css
+++ b/style.css
@@ -1,121 +1,125 @@
 *{
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
+  display: block;
 }
 
 body{
-  font-family: 'Open Sans', sans-serif;
-  font-size: 20px;
-  line-height: 30px;
-  display: block;
-  background-image: url("images/space.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-ul li{
-  list-style: none;
-  margin: 10px;
+  font-family: 'Lato', sans-serif;
+  background-image: url("img/lightbg.jpg");
 }
 
 h1{
-  font-family: 'Euphoria Script', cursive;
-  font-size: 40px;
+  line-height: 40px;
 }
 
-.left{
-  align-items: center;
-  margin: auto;
+h2{
+  line-height: 30px;
+  color: #fffffc;
+  padding: 10px;
+  border-radius: 10px 10px 0px 0px;
+  background-image: url("img/darkwood.jpeg");
 }
 
-.left img{
-  width: 10%;
-  border-radius: 50%;
-  display: block;
-  margin: 10px auto;
+p{
+  line-height: 26px;
 }
 
-
-.main{
-  opacity: 0.9;
-  height: 430px;
-  border-radius: 5px;
-  margin: 10px;
+nav{
+  margin-left: 25%;
+  z-index: -1;
 }
 
-.isi{
+nav ul{
+  display: flex;
+}
+
+nav ul li{
+  width: 25%;
   text-align: center;
-  width: 80%;
-  height: 80%;
-  margin: 20px auto;
-  padding:30px;
+}
+
+nav ul li a{
+  text-decoration: none;
+  color: #00000f;
+  line-height: 40px;
+  border-bottom: 1px solid black;
+  transition: 0.5s;
+}
+
+nav ul li a:hover{
+  color: #fffffa;
+  background-image: url("img/darkwood.jpeg");
+}
+
+nav ul li a:active{
+  color: #fffffa;
+  background-size: auto;
+  background-image: url("img/darkwood.jpeg");
+}
+
+section{
+  margin: 80px;
+  border-bottom: 3px solid black;
+  border-right: 3px solid black;
   border-radius: 10px;
-  border: 1px solid white;
-  top: 30px;
-  color: white;
+  background-color: #ffffff;
+  box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
 }
 
 
-
-.logo{
-  width:10%;
-  margin: auto;
+section ul{
+  padding: 5px;
+  list-style: none;
 }
 
+section li{
+  line-height: 30px;
+}
 
-.skillset ul li{
-  text-align: left;
-  border: none;
-  border-radius: 5px;
-  color: white;
-  opacity: .9;
+.side{
+  position: fixed;
+  background-image: url("img/darkwood.jpeg");
+  width: 25%;
+  float:left;
+  min-height: 100%;
+}
+
+.side ul{
+  padding: 5px;
+  list-style: none;
+}
+
+.side li{
+  line-height: 25px;
+}
+
+.img{
+  width: 100%;
+  height: 270px;
+  background-image: url("img/proframe.png");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.basic{
+  color: #fffffd;
+  padding: 20px;
+}
+
+.content{
+  width: 70%;
+  padding-left: 30%;
+}
+
+.points{
   padding: 10px;
 }
 
-.speak{
-  width: 80%;
-  background-color: #8C3269;
-}
-
-.listen{
-  width:85%;
-  background-color: #5B2F77;
-}
-.team{
-  width: 90%;
-  background-color: #8C3269;
-}
-.write{
-  width: 80%;
-  background-color: #5B2F77;
-}
-.creative{
-  width: 85%;
-  background-color: #8C3269;
-}
-
-.imgbox{
-  width: 400px;
-  height: 1000px;
-  margin: 20px auto 10px;
-  float: left;
-}
-
-.interest img{
-  width: 100%;
-  border: 4px solid #ffffff;
-  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.5);
-}
-
-.thumb ul{
-  margin: 0 auto;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.interest ul li img{
-  width: 120px;
-  margin:auto;
+#dp{
+  width: 50%;
+  margin-left: 25%;
+  border-radius: 50%;
+  padding-top: 8%;
 }
